--- a/package.json
+++ b/package.json
@@ -1,42 +1,68 @@
 {
-  "name": "next-app-template",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@nextui-org/button": "2.0.26",
-    "@nextui-org/code": "2.0.24",
-    "@nextui-org/input": "2.1.16",
-    "@nextui-org/kbd": "2.0.25",
-    "@nextui-org/link": "2.0.26",
-    "@nextui-org/navbar": "2.0.27",
-    "@nextui-org/snippet": "2.0.30",
-    "@nextui-org/switch": "2.0.25",
-    "@nextui-org/system": "2.0.15",
-    "@nextui-org/theme": "2.1.17",
-    "@react-aria/ssr": "^3.8.0",
-    "@react-aria/visually-hidden": "^3.8.6",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.16",
-    "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "14.0.2",
-    "framer-motion": "^10.16.4",
-    "intl-messageformat": "^10.5.0",
-    "next": "14.0.2",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-variants": "^0.1.18",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
-  }
+	"name": "next-app-template",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
+		"@nextui-org/button": "2.0.26",
+		"@nextui-org/code": "2.0.24",
+		"@nextui-org/divider": "^2.0.25",
+		"@nextui-org/input": "2.1.16",
+		"@nextui-org/kbd": "2.0.25",
+		"@nextui-org/link": "2.0.26",
+		"@nextui-org/navbar": "2.0.27",
+		"@nextui-org/radio": "^2.0.25",
+		"@nextui-org/react": "^2.2.9",
+		"@nextui-org/snippet": "2.0.30",
+		"@nextui-org/switch": "2.0.25",
+		"@nextui-org/system": "2.0.15",
+		"@nextui-org/theme": "2.1.17",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-popover": "^1.0.7",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-toggle": "^1.0.3",
+		"@react-aria/ssr": "^3.8.0",
+		"@react-aria/visually-hidden": "^3.8.6",
+		"@types/node": "20.5.7",
+		"@types/react": "18.2.21",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.16",
+		"canvas-confetti": "^1.9.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"date-fns": "^3.3.1",
+		"eslint": "8.48.0",
+		"eslint-config-next": "14.0.2",
+		"framer-motion": "^10.16.4",
+		"intl-messageformat": "^10.5.0",
+		"lucide-react": "^0.323.0",
+		"luxon": "^3.4.4",
+		"next": "14.0.2",
+		"next-themes": "^0.2.1",
+		"postcss": "8.4.31",
+		"react": "18.2.0",
+		"react-aria": "^3.31.1",
+		"react-day-picker": "^8.10.0",
+		"react-dom": "18.2.0",
+		"react-dropzone": "^14.2.3",
+		"react-hook-form": "^7.50.1",
+		"react-input-mask": "^2.0.4",
+		"react-stately": "^3.29.1",
+		"sonner": "^1.4.0",
+		"tailwind-merge": "^2.2.1",
+		"tailwind-variants": "^0.1.18",
+		"tailwindcss": "3.3.5",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "5.0.4",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/react-input-mask": "^3.0.5"
+	}
 }
