--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
 		"sonner": "^1.4.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.18",
-		"tailwindcss": "3.3.5",
-		"tailwindcss-animate": "^1.0.7",
-		"typescript": "5.0.4",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@types/react-input-mask": "^3.0.5"
+		"@types/react-input-mask": "^3.0.5",
+		"prettier": "3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.11",
+		"tailwindcss": "3.3.5",
+		"tailwindcss-animate": "^1.0.7",
+		"typescript": "5.0.4"
 	}
 }
