--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-popover": "^1.0.7",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-tabs": "^1.0.4",
 		"@radix-ui/react-toggle": "^1.0.3",
 		"@react-aria/ssr": "^3.8.0",
 		"@react-aria/visually-hidden": "^3.8.6",
@@ -47,6 +48,7 @@
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/canvas-confetti": "^1.6.4",
 		"@types/react-input-mask": "^3.0.5",
 		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
