--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
 		"@radix-ui/react-toggle": "^1.0.3",
 		"@react-aria/ssr": "^3.8.0",
 		"@react-aria/visually-hidden": "^3.8.6",
+		"@tanstack/react-query": "^5.20.5",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"autoprefixer": "^10.4.17",
+		"axios": "^1.6.7",
 		"canvas-confetti": "^1.9.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
@@ -31,6 +33,7 @@
 		"eslint-config-next": "14.0.2",
 		"framer-motion": "^10.16.4",
 		"intl-messageformat": "^10.5.0",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.330.0",
 		"next": "14.0.2",
 		"next-themes": "^0.2.1",
@@ -42,13 +45,16 @@
 		"react-hook-form": "^7.50.1",
 		"react-input-mask": "^2.0.4",
 		"react-stately": "^3.29.1",
+		"recharts": "^2.12.0",
 		"sonner": "^1.4.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.18",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.20.1",
 		"@types/canvas-confetti": "^1.6.4",
+		"@types/js-cookie": "^3.0.6",
 		"@types/react-input-mask": "^3.0.5",
 		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
