--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@auth0/nextjs-auth0": "^3.5.0",
 		"@hookform/resolvers": "^3.3.4",
 		"@nextui-org/react": "^2.2.9",
 		"@radix-ui/react-label": "^2.0.2",
