--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "next-app-template",
+	"name": "quiz-app",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -9,16 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@auth0/nextjs-auth0": "^3.5.0",
 		"@hookform/resolvers": "^3.3.4",
 		"@nextui-org/react": "^2.2.9",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-popover": "^1.0.7",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-tabs": "^1.0.4",
-		"@radix-ui/react-toggle": "^1.0.3",
-		"@react-aria/ssr": "^3.8.0",
-		"@react-aria/visually-hidden": "^3.8.6",
 		"@tanstack/react-query": "^5.20.5",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
@@ -29,7 +21,6 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"date-fns": "^3.3.1",
-		"embla-carousel-react": "^8.0.0-rc22",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.0.2",
 		"framer-motion": "^10.16.4",
@@ -37,16 +28,11 @@
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.330.0",
 		"next": "14.0.2",
-		"next-themes": "^0.2.1",
 		"postcss": "8.4.31",
 		"react": "18.2.0",
-		"react-aria": "^3.31.1",
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.3",
 		"react-hook-form": "^7.50.1",
-		"react-input-mask": "^2.0.4",
-		"react-stately": "^3.29.1",
-		"recharts": "^2.12.0",
 		"sonner": "^1.4.0",
 		"tailwind-merge": "^2.2.1",
 		"tailwind-variants": "^0.1.18",
@@ -56,7 +42,6 @@
 		"@tanstack/eslint-plugin-query": "^5.20.1",
 		"@types/canvas-confetti": "^1.6.4",
 		"@types/js-cookie": "^3.0.6",
-		"@types/react-input-mask": "^3.0.5",
 		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"tailwindcss": "3.3.5",
